--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,17 @@ requires = [
     "setuptools_scm>=6.2"
 ]
 build-backend = "setuptools.build_meta"
+[tool.black]
+line-length = 88
+target-version = ['py39']
+include = '\.pyi?$'
+extend-exclude = '''
+# A regex preceded with ^/ will apply only to files and directories
+# in the root of the project.
+^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
+'''
+
+[tool.pyright]
+pythonVersion = '3.9'
+venvPath = ''
+venv = ''
